@@ -1,3 +1,6 @@
+2007-01-23  Andreas Otto <andreas.otto@dkd.de>, Thorsten Kahler <thorsten.kahler@dkd.de>
+	* Security fixes, class.tx_tipafriend.php, method validate(): A mail injection possibility was detected and removed.
+
 2006-09-02  Rupert Germann  <rupi@gmx.li>
 
 	* Security fixes: added the function validateUrl() to prevent cross-site-scripting. The function removes all html-tags from the tipUrl parameter and it checks for '"' (doublequote) in tipUrl. Additionally it checks if the given tipUrl belongs to the server to prevent sending urls of foreign servers.
